Fix horizontal scroll on mobile
Addresses an issue where the website was horizontally scrollable on mobile devices, despite having a vertical layout.

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
+  overflow-x: hidden;
+}
+
+body, html {
+  overflow-x: hidden;
+  width: 100%;
+  position: relative;
 }
 
 .logo {
